--- a/app/views/org/admin/organs/index.html.erb
+++ b/app/views/org/admin/organs/index.html.erb
@@ -10,7 +10,7 @@
   <thead>
     <tr>
       <th>
-        <%= Organ.human_attribute_name(:name) %>(<%= Organ.human_attribute_name(:name_short) %>)
+        <%= Organ.human_attribute_name(:name) %>(<%= Organ.human_attribute_name(:intro) %>)
       </th>
       <th><%= Organ.human_attribute_name(:logo) %></th>
       <th><%= Organ.human_attribute_name(:organ_uuid) %></th>
