--- a/app/views/org/admin/organs/_form.html.erb
+++ b/app/views/org/admin/organs/_form.html.erb
@@ -1,5 +1,5 @@
 <%= f.text_field :name, required: true %>
-<%= f.text_field :name_short %>
+<%= f.text_field :intro %>
 <%= f.file_field :logo %>
 <%= render partial: 'nodes/outer_select', locals: { f: f, outer: 'area' } %>
 <%= f.text_area :address %>
