--- a/app/views/org/panel/organs/_edit.html.erb
+++ b/app/views/org/panel/organs/_edit.html.erb
@@ -8,7 +8,7 @@
     <%= form_with model: @organ, url: panel_organ_path do |f| %>
       <%= render 'shared/error_messages', target: @organ %>
       <%= f.text_field :name, required: true %>
-      <%= f.text_field :name_short %>
+      <%= f.text_field :intro %>
       <%= f.file_field :logo %>
       <%= render partial: 'nodes/outer_select', locals: { f: f, outer: 'area' } %>
       <%= f.text_area :address %>
