--- a/app/views/org/admin/super_job_titles/index.html.erb
+++ b/app/views/org/admin/super_job_titles/index.html.erb
@@ -14,7 +14,7 @@
       <th><%= SuperJobTitle.human_attribute_name(:description) %></th>
       <th><%= JobTitle.human_attribute_name(:role_ids) %></th>
       <th>
-        <%= link_to new_admin_super_job_title_path, remote: true, class: 'ui labeled mini primary button' do %>
+        <%= link_to new_admin_super_job_title_path, remote: true, class: 'ui mini primary button' do %>
           <i class="fas fa-plus"></i><%= t('.new') %>
         <% end %>
       </th>
